Fix timeline line visibility

--- a/components/ResumeItem/ResumeItem.module.css
+++ b/components/ResumeItem/ResumeItem.module.css
@@ -6,7 +6,6 @@
     -moz-border-radius: .3rem;
     -ms-border-radius: .3rem;
     -o-border-radius: .3rem;
-    color: black;
     width: 48%;
     position: relative;
 }
