--- a/styles/Resume.module.css
+++ b/styles/Resume.module.css
@@ -10,7 +10,7 @@
     content: '';
     position: absolute;
     width: 2px;
-    background-color: white;
+    background-color: lightgray;
     top: 0;
     bottom: 0;
     left: 50%;
